Выделяются характеристики из конфига

--- a/reviews_keywords/config.yaml
+++ b/reviews_keywords/config.yaml
@@ -22,3 +22,218 @@ sravnitelno_usilitelnye_konstruktsii: [
 slova_dovolstva: ["отличный", "хороший", "шикарный", "офигенный", "превосходный", "замечательный", "потрясающий", "великолепный", "прекрасный", "изумительный", "фантастический", "удивительный", "роскошный", "невероятный", "зачётный", "суперский", "классный", "идеальный", "восторг", "чудесный", "блистательный", "безупречный", "радостный", "позитивный", "приятный", "сказочный", "крутой", "гениальный", "бесподобный"]
 
 slova_neudovolstva: ["плохой", "ужасный", "отвратительный", "ужасный", "омерзительный", "неприятный", "неудовлетворительный", "скверный", "жуткий", "страшный", "мерзкий", "отталкивающий", "паршивый", "никакой", "негодный", "беспросветный", "недостойный", "отстойный", "гнусный", "гадкий", "худший", "гнусный", "убогий", "ничтожный", "отвратный", "жалкий"]
+
+aspect_groups_main:
+  Товар: ['товар', 'продукт', 'вещь', 'изделие']
+  Внешний вид: ['внешний вид', 'облик', 'презентация', 'наружность']
+  Бренд: ['бренд', 'марка', 'лейбл', 'торговая марка', 'фирма']
+  Модель: ['модель', 'серия', 'исполнение', 'модификация', 'конфигурация']
+  Артикул: ['артикул', 'идентификатор', 'штрихкод', 'код изделия', 'инвентарный номер']
+  Название: ['название', 'наименование', 'обозначение', 'титул']
+  Цена: ['цена', 'стоимость', 'ценник', 'тариф', 'прайс']
+  Скидка: ['скидка', 'дисконт', 'акция', 'уменьшение стоимости', 'удешевление']
+  Размер: ['размер', 'габариты', 'величина', 'формат']
+  Цвет: ['цвет', 'оттенок', 'расцветка', 'колорит', 'пигмент']
+  Вес: ['вес', 'масса', 'тяжесть', 'нагрузка', 'весомость']
+  Материал: ['материал', 'сырье', 'основа', 'составляющая', 'материализованный компонент']
+  Объем: ['объем', 'вместимость', 'ёмкость', 'объемный показатель']
+  Мощность: ['мощность', 'энергетическая мощность', 'ваттаж', 'силовая единица']
+  Количество: ['количество', 'число', 'численность', 'числовое значение']
+  Количество в упаковке: ['количество в упаковке', 'упаковочная единица', 'комплект', 'упаковочный объем']
+  Длина: ['длина', 'протяженность', 'метраж', 'измерение в длину']
+  Ширина: ['ширина', 'размах', 'ширина изделия', 'боковая протяженность']
+  Высота: ['высота', 'вертикальная протяженность', 'измерение по высоте', 'высотная характеристика']
+  Глубина: ['глубина', 'толщина', 'глубинный размер', 'глубина изделия']
+  Диаметр: ['диаметр', 'радиус', 'окружность', 'поперечник']
+  Толщина: ['толщина', 'толщинный показатель', 'толщинная характеристика', 'плотность']
+  Тип: ['тип', 'категория', 'вид', 'классификация']
+  Тип устройства: ['тип устройства', 'категория устройства', 'разновидность техники']
+  Назначение: ['назначение', 'предназначение', 'функционал', 'область использования']
+  Гарантия: ['гарантия', 'гарантийный срок', 'обеспечение качества', 'условие гарантии']
+  Совместимость: ['совместимость', 'поддержка', 'корреспонденция', 'интеграция']
+  Упаковка: ['упаковка', 'тара', 'обертка', 'упаковочный материал', 'кейс']
+  Производитель: ['производитель', 'изготовитель', 'фирма-производитель', 'разработчик']
+  Страна производитель: ['страна производитель', 'страна происхождения', 'изготовление', 'производственный регион']
+  Состав: ['состав', 'ингредиенты', 'компоненты', 'композит']
+  Особенности: ['особенности', 'характеристики', 'специфика', 'уникальные свойства']
+  Форма: ['форма', 'контур', 'геометрия', 'формообразование']
+  Применение: ['применение', 'эксплуатация', 'использование', 'применение в работе']
+  Максимальная нагрузка: ['максимальная нагрузка', 'допустимая нагрузка', 'предел нагрузки', 'нагрузочная ёмкость']
+  Ёмкость: ['ёмкость', 'вместимость', 'объемная ёмкость', 'вместимость контейнера']
+  Рекомендации по уходу: ['рекомендации по уходу', 'уходовые рекомендации', 'инструкции по поддержанию', 'советы по эксплуатации']
+  Инструкция по применению: ['инструкция по применению', 'руководство пользователя', 'инструкция', 'пособие по использованию']
+  Срок годности: ['срок годности', 'период хранения', 'срок хранения', 'дата истечения']
+  Сертификат: ['сертификат', 'документ о соответствии', 'сертификационный акт', 'удостоверение качества']
+
+aspect_groups_devices:
+  Мощность: ['мощность', 'ваттаж', 'энергетическая мощность', 'силовой показатель']
+  Напряжение: ['напряжение', 'вольтаж', 'токовый показатель', 'уровень напряжения']
+  Частота: ['частота', 'герцовка', 'частотный диапазон', 'частотные показатели']
+  Аккумулятор: ['аккумулятор', 'батарея', 'зарядное устройство', 'энергоблок']
+  Ёмкость батареи: ['ёмкость батареи', 'вместимость аккумулятора', 'заряд батареи', 'энергетическая ёмкость']
+  Время работы: ['время работы', 'время автономной работы', 'время эксплуатации', 'рабочий цикл']
+  Время зарядки: ['время зарядки', 'время восполнения заряда', 'время подзарядки', 'длительность зарядки']
+  Интерфейсы: ['интерфейсы', 'подключения', 'разъемы', 'системные интерфейсы']
+  Совместимость: ['совместимость', 'поддерживаемые устройства', 'подключаемые устройства', 'сопряжение']
+  Управление: ['управление', 'контроль', 'регулировка', 'настройка']
+  Тип подключения: ['тип подключения', 'способ подключения', 'тип соединения', 'подключаемость']
+  Защита от перегрузки: ['защита от перегрузки', 'перегрузочная защита', 'перегрузка защиты', 'защитный механизм']
+  Светодиодный индикатор: ['светодиодный индикатор', 'LED индикатор', 'световой индикатор', 'освещение']
+  Поддержка форматов: ['поддержка форматов', 'поддерживаемые форматы', 'совместимые форматы', 'форматирование']
+  Разрешение экрана: ['разрешение экрана', 'пиксельное разрешение', 'экранное разрешение', 'разрешающая способность']
+  Сенсорный экран: ['сенсорный экран', 'тачскрин', 'экран с сенсорным управлением', 'сенсорная панель']
+  Встроенные функции: ['встроенные функции', 'функционал', 'дополнительные функции', 'интегрированные возможности']
+  Подсветка: ['подсветка', 'световое оформление', 'световой эффект', 'иллюминация']
+  Звук: ['звук', 'аудио', 'звуковое сопровождение', 'аудиовывод']
+  Вибрация: ['вибрация', 'виброотклик', 'вибрационный эффект', 'тактильная обратная связь']
+  Динамик: ['динамик', 'колонка', 'звуковой динамик', 'акустическая система']
+  Микрофон: ['микрофон', 'звукоулавливающий прибор', 'аудиовход', 'громкоговоритель']
+  Камера: ['камера', 'видеоустройство', 'фотоаппарат', 'съемочное устройство']
+
+aspect_groups_cars:
+  Тип автомобиля: ['тип автомобиля', 'автомобильный класс', 'категория авто', 'вид автомобиля']
+  Модель автомобиля: ['модель автомобиля', 'модель авто', 'автомобильная модель', 'модельный ряд']
+  Тип кузова: ['тип кузова', 'кузов', 'тип автомобильного кузова', 'форма кузова']
+  Сезонность: ['сезонность', 'сезон', 'временной период', 'сезонные особенности']
+  Индекс нагрузки: ['индекс нагрузки', 'нагрузочный индекс', 'допустимая нагрузка', 'нагрузочное значение']
+  Индекс скорости: ['индекс скорости', 'скоростной индекс', 'максимальная скорость', 'скоростное ограничение']
+  Шиповка: ['шиповка', 'наличие шипов', 'шипованность', 'шипы']
+  Тип топлива: ['тип топлива', 'вид топлива', 'топливная категория', 'топливо']
+  Объем двигателя: ['объем двигателя', 'объем моторного отсека', 'моторная ёмкость', 'рабочий объем двигателя']
+  Тип привода: ['тип привода', 'привод', 'приводной механизм', 'тип трансмиссии']
+  Тип трансмиссии: ['тип трансмиссии', 'коробка передач', 'трансмиссионный тип', 'трансмиссия']
+  Состав смеси: ['состав смеси', 'смесь', 'ингредиенты смеси', 'композиция']
+  Присадки: ['присадки', 'добавки', 'смазочные добавки', 'присадочные элементы']
+  Вязкость: ['вязкость', 'масляная вязкость', 'плотность масла', 'вискозность']
+  Тип масла: ['тип масла', 'масляная категория', 'вид масла', 'масляный продукт']
+  Количество дверей: ['количество дверей', 'двери', 'дверной механизм', 'число дверей']
+  Количество сидений: ['количество сидений', 'сиденья', 'число мест', 'число сидений']
+  Тип фильтра: ['тип фильтра', 'фильтрационный механизм', 'категория фильтра', 'фильтр']
+  Режим работы: ['режим работы', 'рабочий режим', 'рабочий режим устройства', 'эксплуатационный режим']
+  Номинальное напряжение: ['номинальное напряжение', 'рабочее напряжение', 'электрическое напряжение', 'стандартное напряжение']
+  Рабочая температура: ['рабочая температура', 'температурный диапазон', 'температура эксплуатации', 'рабочий температурный режим']
+  Степень защиты: ['степень защиты', 'защитный класс', 'класс защиты', 'уровень безопасности']
+  Уровень шума: ['уровень шума', 'шум', 'звуковой уровень', 'звуковое загрязнение']
+  Емкость аккумулятора: ['емкость аккумулятора', 'вместимость батареи', 'аккумуляторная ёмкость', 'батарейная ёмкость']
+
+aspect_groups_clothes:
+  Размер: ['размер', 'размерная сетка', 'размерность', 'параметры размера']
+  Цвет: ['цвет', 'цветовой тон', 'расцветка', 'палитра']
+  Материал: ['материал', 'ткань', 'материал изготовления', 'материальная база']
+  Фасон: ['фасон', 'стиль', 'крой', 'форма кроя']
+  Стиль: ['стиль', 'дизайн', 'мода', 'оформление']
+  Тип одежды: ['тип одежды', 'категория одежды', 'вид одежды', 'одежда']
+  Тип обуви: ['тип обуви', 'категория обуви', 'вид обуви', 'обувная категория']
+  Подкладка: ['подкладка', 'внутренняя отделка', 'внутренний материал', 'подкладочный слой']
+  Утеплитель: ['утеплитель', 'утепляющий слой', 'изоляция', 'утепляющая подкладка']
+  Сезон: ['сезон', 'временной период', 'сезонность', 'сезонное использование']
+  Пол: ['пол', 'гендер', 'половая принадлежность', 'гендерная категория']
+  Возраст: ['возраст', 'возрастная категория', 'возрастная группа', 'возрастное ограничение']
+  Тип застежки: ['тип застежки', 'застежка', 'механизм застегивания', 'застегивающее устройство']
+  Высота каблука: ['высота каблука', 'размер каблука', 'каблучный показатель', 'высота подъема']
+  Декор: ['декор', 'украшение', 'декоративные элементы', 'декоративное оформление']
+  Тип подошвы: ['тип подошвы', 'подошва', 'вид подошвы', 'подошвенный материал']
+  Защита от воды: ['защита от воды', 'водозащитный слой', 'водонепроницаемость', 'водоотталкивающие свойства']
+  Степень теплоизоляции: ['степень теплоизоляции', 'утепление', 'изоляционные характеристики', 'теплозащита']
+  Форма носка: ['форма носка', 'носковая часть', 'форма передней части', 'носовая форма']
+  Форма каблука: ['форма каблука', 'каблучная форма', 'каблучный дизайн', 'форма пятки']
+
+aspect_groups_appliances:
+  Тип устройства: ['тип устройства', 'категория техники', 'вид устройства', 'устройство']
+  Мощность: ['мощность', 'энергопотребление', 'мощностной показатель', 'энергетическая мощность']
+  Энергопотребление: ['энергопотребление', 'энергетическая эффективность', 'потребляемая мощность', 'уровень энергопотребления']
+  Ёмкость: ['ёмкость', 'вместимость', 'объем бака', 'вместимость устройства']
+  Управление: ['управление', 'контроль', 'регулировка', 'настройка']
+  Функции: ['функции', 'дополнительные функции', 'встроенные функции', 'функциональные возможности']
+  Программы: ['программы', 'режимы работы', 'настройки', 'операционные режимы']
+  Защита от перегрева: ['защита от перегрева', 'перегрев', 'термозащита', 'температурная защита']
+  Защита от протечек: ['защита от протечек', 'протечка', 'водозащитный механизм', 'гидрозащита']
+  Класс энергопотребления: ['класс энергопотребления', 'энергетический класс', 'класс энергоэффективности', 'энергоэффективность']
+  Уровень шума: ['уровень шума', 'шум', 'звуковой уровень', 'акустический шум']
+  Тип установки: ['тип установки', 'способ установки', 'вид монтажа', 'установочный метод']
+  Тип крепления: ['тип крепления', 'механизм крепления', 'способ фиксации', 'крепеж']
+  Длина шнура: ['длина шнура', 'шнур', 'длина кабеля', 'кабель']
+  Объем воды: ['объем воды', 'водяная ёмкость', 'вместимость воды', 'ёмкость для воды']
+  Давление воды: ['давление воды', 'водяное давление', 'напор воды', 'гидравлическое давление']
+  Температура нагрева: ['температура нагрева', 'температура воды', 'температурный режим', 'температура']
+  Объем бака: ['объем бака', 'вместимость бака', 'емкость бака', 'ёмкость']
+
+aspect_groups_beauty:
+  Тип кожи: ['тип кожи', 'категория кожи', 'тип эпидермиса', 'вид кожи']
+  Тип волос: ['тип волос', 'категория волос', 'вид волос', 'структура волос']
+  Объём: ['объём', 'вместимость', 'размер', 'объемное значение']
+  Состав: ['состав', 'ингредиенты', 'компоненты', 'составляющие']
+  Назначение: ['назначение', 'предназначение', 'функция', 'назначение средства']
+  Рекомендации по применению: ['рекомендации по применению', 'инструкция', 'способ использования', 'рекомендации']
+  Возрастная группа: ['возрастная группа', 'возрастная категория', 'возраст', 'возрастное назначение']
+  Пол: ['пол', 'гендер', 'половая принадлежность', 'гендерное назначение']
+  Тип средства: ['тип средства', 'категория', 'вид средства', 'средство']
+  Форма выпуска: ['форма выпуска', 'тип упаковки', 'вид упаковки', 'форма']
+  Время воздействия: ['время воздействия', 'продолжительность действия', 'время применения', 'длительность воздействия']
+  Уровень защиты SPF: ['уровень защиты SPF', 'защита от солнца', 'солнцезащитный фактор', 'SPF']
+  Аромат: ['аромат', 'запах', 'парфюм', 'парфюмерный аромат']
+  Текстура: ['текстура', 'структура', 'консистенция', 'текстурные особенности']
+  Влагостойкость: ['влагостойкость', 'водоотталкивание', 'водостойкость', 'влагозащитные свойства']
+  Гипоаллергенность: ['гипоаллергенность', 'неаллергенность', 'антиаллергенный эффект', 'гипоаллергенный состав']
+
+aspect_groups_toys:
+  Возраст: ['возраст', 'возрастная категория', 'возрастной диапазон', 'возрастное ограничение']
+  Пол: ['пол', 'гендер', 'половая принадлежность', 'гендерное назначение']
+  Материал: ['материал', 'основа', 'сырье', 'материалы изготовления']
+  Цвет: ['цвет', 'оттенок', 'расцветка', 'цветовая гамма']
+  Тип игрушки: ['тип игрушки', 'вид игрушки', 'категория игрушек', 'игрушка']
+  Назначение: ['назначение', 'предназначение', 'функция', 'область использования']
+  Комплектация: ['комплектация', 'состав набора', 'включенные элементы', 'компоненты комплекта']
+  Количество деталей: ['количество деталей', 'число элементов', 'детали', 'элементы конструкции']
+  Размер упаковки: ['размер упаковки', 'габариты', 'величина упаковки', 'размерные показатели']
+  Безопасность: ['безопасность', 'защитные меры', 'безопасные материалы', 'обеспечение безопасности']
+  Тип батареек: ['тип батареек', 'категория батареек', 'батарейки', 'источник питания']
+  Развиваемые навыки: ['развиваемые навыки', 'образовательные элементы', 'обучение', 'развитие навыков']
+
+aspect_groups_books:
+  Формат: ['формат', 'размер', 'размеры страниц', 'формат издания']
+  Количество страниц: ['количество страниц', 'число страниц', 'страничный объем', 'страницы']
+  Тип обложки: ['тип обложки', 'вид обложки', 'переплет', 'обложка']
+  Тип бумаги: ['тип бумаги', 'бумажный материал', 'вид бумаги', 'материал страниц']
+  Цвет бумаги: ['цвет бумаги', 'бумажный цвет', 'оттенок бумаги', 'бумага']
+  Листовка: ['листовка', 'брошюра', 'информационный лист', 'брошюровка']
+  Тип переплета: ['тип переплета', 'переплет', 'переплетный материал', 'переплетный механизм']
+  Размер: ['размер', 'формат', 'размеры изделия', 'габариты']
+  Тематика: ['тематика', 'предмет', 'содержание', 'тема']
+  Язык: ['язык', 'языковой формат', 'перевод', 'языковая версия']
+  Иллюстрации: ['иллюстрации', 'рисунки', 'картинки', 'графические изображения']
+  Назначение: ['назначение', 'предназначение', 'функция', 'целевое назначение']
+
+aspect_groups_furniture:
+  Тип мебели: ['тип мебели', 'категория мебели', 'вид мебели', 'мебель']
+  Материал: ['материал', 'основа', 'материалы изготовления', 'состав']
+  Цвет: ['цвет', 'оттенок', 'расцветка', 'цветовая гамма']
+  Размеры: ['размеры', 'габариты', 'размерные параметры', 'размер']
+  Стиль: ['стиль', 'дизайн', 'оформление', 'мебельный стиль']
+  Количество ящиков: ['количество ящиков', 'число секций', 'секцийность', 'выдвижные ящики']
+  Тип фурнитуры: ['тип фурнитуры', 'фурнитура', 'категория фурнитуры', 'механизмы фурнитуры']
+  Высота сиденья: ['высота сиденья', 'размер по вертикали', 'вертикальная высота', 'высота']
+  Ширина сиденья: ['ширина сиденья', 'размер по горизонтали', 'ширинный показатель', 'ширина']
+  Длина сиденья: ['длина сиденья', 'размер по горизонтали', 'длина', 'протяженность']
+  Максимальная нагрузка: ['максимальная нагрузка', 'допустимая нагрузка', 'предельная нагрузка', 'нагрузочная ёмкость']
+  Тип крепления: ['тип крепления', 'крепеж', 'механизм фиксации', 'способ фиксации']
+  Комплектация: ['комплектация', 'состав набора', 'включенные элементы', 'компоненты комплекта']
+  Тип покрытия: ['тип покрытия', 'вид покрытия', 'покрывающий слой', 'материал покрытия']
+  Тип механизма: ['тип механизма', 'механизм', 'категория механизма', 'механический компонент']
+  Регулировка высоты: ['регулировка высоты', 'настройка по высоте', 'высотная регулировка', 'регулировка']
+  Подсветка: ['подсветка', 'световое оформление', 'световой эффект', 'иллюминация']
+
+aspect_groups_garden:
+  Тип растения: ['тип растения', 'вид растения', 'категория растений', 'растение']
+  Тип грунта: ['тип грунта', 'категория почвы', 'грунт', 'почвенный тип']
+  Тип удобрения: ['тип удобрения', 'категория удобрений', 'удобрение', 'удобрительный состав']
+  Сезонность: ['сезонность', 'сезон', 'временной период', 'сезонные особенности']
+  Тип семян: ['тип семян', 'категория семян', 'семена', 'семенной материал']
+  Тип почвы: ['тип почвы', 'почва', 'вид почвы', 'почвенная категория']
+  Тип полива: ['тип полива', 'полив', 'вид полива', 'метод полива']
+  Размер участка: ['размер участка', 'площадь участка', 'размер земли', 'земельный участок']
+  Состав удобрения: ['состав удобрения', 'ингредиенты удобрения', 'компоненты удобрения', 'удобрительный состав']
+  Способ посадки: ['способ посадки', 'метод посадки', 'посадочный способ', 'посадка']
+  Тип орудия: ['тип орудия', 'категория инструментов', 'инструмент', 'орудие']
+  Длина шланга: ['длина шланга', 'шланг', 'длина водопроводного шланга', 'протяженность шланга']
+  Мощность насоса: ['мощность насоса', 'насосная мощность', 'мощность оборудования', 'производительность насоса']
